--- a/Wander/Wander/View/WNDisplayViewCell.xib
+++ b/Wander/Wander/View/WNDisplayViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lbP-Lm-1hC">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lbP-Lm-1hC">
                         <rect key="frame" x="8" y="8" width="304" height="165"/>
                     </imageView>
                 </subviews>
@@ -29,7 +29,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="locationImageView" destination="lbP-Lm-1hC" id="1SW-nl-3VT"/>
+                <outlet property="locationImageView" destination="lbP-Lm-1hC" id="Yw1-LX-EUL"/>
             </connections>
             <point key="canvasLocation" x="-159.42028985507247" y="145.64732142857142"/>
         </tableViewCell>
